--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,12 @@ spring:
     username: ${DATABASE_USERNAME}
     password: ${DATABASE_PASSWORD}
 
-#  jpa:
+  jpa:
 #    hibernate:
 #      ddl-auto: update
-#    show-sql: true
+    show-sql: true
 
   flyway:
     enabled: true
-    locations: classpath:db/migration
-    baseline-on-migrate: true
+#    locations: classpath:db/migration
+#    baseline-on-migrate: true
